--- a/meadows.ipynb
+++ b/meadows.ipynb
@@ -56,17 +56,7 @@
         "import scipy\n",
         "import folium\n",
         "import shapely\n",
-        "from IPython.display import Image"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "id": "GRmED_ZR0WiM"
-      },
-      "outputs": [],
-      "source": [
+        "from IPython.display import Image\n",
         "import geopandas as gpd\n",
         "import rasterio\n",
         "import pygeohydro"
