--- a/visualize_dem.ipynb
+++ b/visualize_dem.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_6f19e8d492b8dd7004cca7b2df4f207f {\n",
+       "                #map_6715efd15296719d2f12492c76dedfd8 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -197,14 +197,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_6f19e8d492b8dd7004cca7b2df4f207f&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_6715efd15296719d2f12492c76dedfd8&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_6f19e8d492b8dd7004cca7b2df4f207f = L.map(\n",
-       "                &quot;map_6f19e8d492b8dd7004cca7b2df4f207f&quot;,\n",
+       "            var map_6715efd15296719d2f12492c76dedfd8 = L.map(\n",
+       "                &quot;map_6715efd15296719d2f12492c76dedfd8&quot;,\n",
        "                {\n",
        "                    center: [20.0, 0.0],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -228,21 +228,21 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_b8f1c0f92b9ac524500e486c3271df86 = L.tileLayer(\n",
+       "            var tile_layer_99309b41eeb5d6192b970dadb37c5ed7 = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 30, &quot;maxZoom&quot;: 30, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
+       "            ).addTo(map_6715efd15296719d2f12492c76dedfd8);\n",
        "        \n",
        "    \n",
        "            var tile_layer_efcd8b48e897d67390721d4240bc8f63 = L.tileLayer(\n",
        "                &quot;https://mt1.google.com/vt/lyrs=m\\u0026x={x}\\u0026y={y}\\u0026z={z}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 22, &quot;maxZoom&quot;: 22, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
+       "            ).addTo(map_6715efd15296719d2f12492c76dedfd8);\n",
        "        \n",
        "    \n",
        "            L.control.fullscreen(\n",
        "                {&quot;forceSeparateButton&quot;: false, &quot;position&quot;: &quot;topleft&quot;, &quot;title&quot;: &quot;Full Screen&quot;, &quot;titleCancel&quot;: &quot;Exit Full Screen&quot;}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
+       "            ).addTo(map_6715efd15296719d2f12492c76dedfd8);\n",
        "        \n",
        "    \n",
        "            var options = {\n",
@@ -252,13 +252,13 @@
        "            }\n",
        "            // FeatureGroup is to store editable layers.\n",
        "            var drawnItems = new L.featureGroup().addTo(\n",
-       "                map_6f19e8d492b8dd7004cca7b2df4f207f\n",
+       "                map_6715efd15296719d2f12492c76dedfd8\n",
        "            );\n",
        "            options.edit.featureGroup = drawnItems;\n",
-       "            var draw_control_bfd2a2e1062dd8255b972c438fac6b2d = new L.Control.Draw(\n",
+       "            var draw_control_030cf9741f1d79c153e4ca8afcf19f73 = new L.Control.Draw(\n",
        "                options\n",
-       "            ).addTo( map_6f19e8d492b8dd7004cca7b2df4f207f );\n",
-       "            map_6f19e8d492b8dd7004cca7b2df4f207f.on(L.Draw.Event.CREATED, function(e) {\n",
+       "            ).addTo( map_6715efd15296719d2f12492c76dedfd8 );\n",
+       "            map_6715efd15296719d2f12492c76dedfd8.on(L.Draw.Event.CREATED, function(e) {\n",
        "                var layer = e.layer,\n",
        "                    type = e.layerType;\n",
        "                var coords = JSON.stringify(layer.toGeoJSON());\n",
@@ -268,7 +268,7 @@
        "                });\n",
        "                drawnItems.addLayer(layer);\n",
        "             });\n",
-       "            map_6f19e8d492b8dd7004cca7b2df4f207f.on(&#x27;draw:created&#x27;, function(e) {\n",
+       "            map_6715efd15296719d2f12492c76dedfd8.on(&#x27;draw:created&#x27;, function(e) {\n",
        "                drawnItems.addLayer(e.layer);\n",
        "            });\n",
        "            \n",
@@ -277,108 +277,66 @@
        "            L.Control.geocoder(\n",
        "                {&quot;collapsed&quot;: true, &quot;defaultMarkGeocode&quot;: true, &quot;position&quot;: &quot;topleft&quot;}\n",
        "            ).on(&#x27;markgeocode&#x27;, function(e) {\n",
-       "                map_6f19e8d492b8dd7004cca7b2df4f207f.setView(e.geocode.center, 11);\n",
-       "            }).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
+       "                map_6715efd15296719d2f12492c76dedfd8.setView(e.geocode.center, 11);\n",
+       "            }).addTo(map_6715efd15296719d2f12492c76dedfd8);\n",
        "\n",
        "        \n",
        "    \n",
-       "            map_6f19e8d492b8dd7004cca7b2df4f207f.fitBounds(\n",
+       "            map_6715efd15296719d2f12492c76dedfd8.fitBounds(\n",
        "                [[20, 0], [20, 0]],\n",
        "                {&quot;maxZoom&quot;: 2}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            map_6f19e8d492b8dd7004cca7b2df4f207f.fitBounds(\n",
+       "            map_6715efd15296719d2f12492c76dedfd8.fitBounds(\n",
        "                [[37.90723428211263, -119.84291950232374], [37.90723428211263, -119.84291950232374]],\n",
        "                {&quot;maxZoom&quot;: 12}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            var tile_layer_81f3658fb67c170b80de4ee4a34ea321 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/df0abb502648a4f3ce1e1a6c0ddfffdd-09260a0968f68abe204802a5331b1eee/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_996dc878d342c563f92a6008cfe04bd6 = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/0d625d8dd470f6700f3ae773c2b980b8-c2fe399a4dd5aaea4f78dc4cd3836d5a/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
+       "            ).addTo(map_6715efd15296719d2f12492c76dedfd8);\n",
        "        \n",
        "    \n",
-       "            var tile_layer_940e3aedd68b5338a012b8e9d86ca5e2 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/14afb4ab940e4a8cb73fce959f1bfa86-4f72e737ca7cb48fb4686a6084e8166e/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_1f58267769156f624bc763a161bd6dff = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/bed7bd0cd1578cf8ad84cf3a4ee2d692-49c146267bf4c10f22afc5263edc95bb/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
+       "            ).addTo(map_6715efd15296719d2f12492c76dedfd8);\n",
        "        \n",
        "    \n",
-       "            var tile_layer_47ec3e1bd58912ce7479ecea3c248a48 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/f8ada3990128d98cc74465ce08e93df2-b8e15c32c03fa2bf6151b048ecb83028/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_9c7ef0e1275da8a7bee5105c4f26b59f = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/23113ad860dae94fd363a36be6294a03-0998b49ef79235da4e2824fff075f43d/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
+       "            ).addTo(map_6715efd15296719d2f12492c76dedfd8);\n",
        "        \n",
        "    \n",
-       "            var tile_layer_a2a94670bb27e8fbfc45ee3a0093d523 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/1d112333cf0b218e8a0734fe61afb6d0-0a4cce511b4c54e5a1cf5b0b5fe75f85/tiles/{z}/{x}/{y}&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
-       "        \n",
-       "    \n",
-       "            var tile_layer_e85033b3d97af21b311e7de7f9a2f385 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/0d625d8dd470f6700f3ae773c2b980b8-71607c17e083f346625b3712c3127444/tiles/{z}/{x}/{y}&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
-       "        \n",
-       "    \n",
-       "            var tile_layer_adbb93888749c1720c1cb3a3b3a7f0ea = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/7cf828c3a656da91334d68359eb0e670-afd58be015cdbdd29f9245c742c3ecc8/tiles/{z}/{x}/{y}&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
-       "        \n",
-       "    \n",
-       "            var tile_layer_dce73236d692399abc2676892e5eca48 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/bed7bd0cd1578cf8ad84cf3a4ee2d692-736a96f149839d9ac56225c3b4a2559a/tiles/{z}/{x}/{y}&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
-       "        \n",
-       "    \n",
-       "            var tile_layer_971def2439e73edf90353f84d608b9f8 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/620e6d8dca2e5e271ba63347611ba819-f3957f85ec3487efb2e15a84a6d2a166/tiles/{z}/{x}/{y}&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
-       "        \n",
-       "    \n",
-       "            var tile_layer_ce4b737029616228b945d2bb5f7b44b2 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/maps/23113ad860dae94fd363a36be6294a03-0ac350df650dbbed71e85019d14aec58/tiles/{z}/{x}/{y}&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
-       "        \n",
-       "    \n",
-       "            var layer_control_71b7c798e2e9343c60fe8d54cd1b85df = {\n",
+       "            var layer_control_2c269386957bfe987cd8805d76ccd7dc = {\n",
        "                base_layers : {\n",
-       "                    &quot;openstreetmap&quot; : tile_layer_b8f1c0f92b9ac524500e486c3271df86,\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_99309b41eeb5d6192b970dadb37c5ed7,\n",
        "                },\n",
        "                overlays :  {\n",
        "                    &quot;Google Maps&quot; : tile_layer_efcd8b48e897d67390721d4240bc8f63,\n",
-       "                    &quot;USGS 1m&quot; : tile_layer_81f3658fb67c170b80de4ee4a34ea321,\n",
-       "                    &quot;USGS 10m&quot; : tile_layer_940e3aedd68b5338a012b8e9d86ca5e2,\n",
-       "                    &quot;USGS 30m&quot; : tile_layer_47ec3e1bd58912ce7479ecea3c248a48,\n",
-       "                    &quot;MERIT&quot; : tile_layer_a2a94670bb27e8fbfc45ee3a0093d523,\n",
-       "                    &quot;USGS 1m hillshade&quot; : tile_layer_e85033b3d97af21b311e7de7f9a2f385,\n",
-       "                    &quot;USGS 10m hillshade&quot; : tile_layer_adbb93888749c1720c1cb3a3b3a7f0ea,\n",
-       "                    &quot;USGS 30m hillshade&quot; : tile_layer_dce73236d692399abc2676892e5eca48,\n",
-       "                    &quot;MERIT hillshade&quot; : tile_layer_971def2439e73edf90353f84d608b9f8,\n",
-       "                    &quot;meadows&quot; : tile_layer_ce4b737029616228b945d2bb5f7b44b2,\n",
+       "                    &quot;USGS 1m hillshade&quot; : tile_layer_996dc878d342c563f92a6008cfe04bd6,\n",
+       "                    &quot;USGS 30m hillshade&quot; : tile_layer_1f58267769156f624bc763a161bd6dff,\n",
+       "                    &quot;meadows&quot; : tile_layer_9c7ef0e1275da8a7bee5105c4f26b59f,\n",
        "                },\n",
        "            };\n",
        "            L.control.layers(\n",
-       "                layer_control_71b7c798e2e9343c60fe8d54cd1b85df.base_layers,\n",
-       "                layer_control_71b7c798e2e9343c60fe8d54cd1b85df.overlays,\n",
+       "                layer_control_2c269386957bfe987cd8805d76ccd7dc.base_layers,\n",
+       "                layer_control_2c269386957bfe987cd8805d76ccd7dc.overlays,\n",
        "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
-       "            ).addTo(map_6f19e8d492b8dd7004cca7b2df4f207f);\n",
+       "            ).addTo(map_6715efd15296719d2f12492c76dedfd8);\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" width=\"100%\" height=\"600\"style=\"border:none !important;\" \"allowfullscreen\" \"webkitallowfullscreen\" \"mozallowfullscreen\"></iframe>"
       ],
       "text/plain": [
-       "<geemap.foliumap.Map at 0x7fe3a28e4520>"
+       "<geemap.foliumap.Map at 0x7fe3a28e9f10>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
